--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,14 +28,14 @@ html, body {
 	right: 0
 }
 .navigation_arrow img{
-	max-height: 100px;
+	max-height: 20%;
 }
 .navigation_arrow img:hover{
 	cursor:pointer;
 }
 .image_wrapper {
 	margin: 3%;
-	width: 800px;
+	width: 60%;
 	text-align:center;
 	-webkit-box-shadow: 3px 3px 5px 6px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
 	-moz-box-shadow:    3px 3px 5px 6px #ccc;  /* Firefox 3.5 - 3.6 */
